--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
 	"name": "eip-1193-signer",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "generic signer for eip-1193 providers",
 	"publishConfig": {
 		"access": "public"
 	},
 	"type": "module",
 	"main": "dist/index.cjs",
-	"module": "dist/index.js",
+	"module": "dist/index.mjs",
 	"types": "dist/index.d.ts",
+	".": {
+		"require": {
+			"types": "./dist/index.d.ts",
+			"default": "./dist/index.cjs"
+		},
+		"import": {
+			"types": "./dist/index.d.ts",
+			"default": "./dist/index.mjs"
+		}
+	},
 	"devDependencies": {
-		"eip-1193": "^0.4.4",
-		"rimraf": "^4.4.1",
-		"tsup": "^6.7.0",
-		"typescript": "^5.0.4"
+		"eip-1193": "^0.5.0",
+		"pkgroll": "^2.0.2",
+		"rimraf": "^5.0.5",
+		"typescript": "^5.4.5"
 	},
 	"dependencies": {
-		"viem": "^0.3.50"
+		"viem": "^2.9.16"
 	},
 	"scripts": {
-		"build": "rimraf dist && tsup src/index.ts --dts --format esm,cjs",
-    	"dev": "rimraf dist && tsup src/index.ts --dts --format esm,cjs --watch"
+		"build": "rimraf dist && pkgroll --sourcemap",
+		"dev": "pkgroll --watch"
 	}
 }
