--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"moduleResolution": "node",
+		"moduleResolution": "Node",
 		"lib": ["ES2020", "dom"],
 		"target": "ES2020",
 		"declaration": true,
@@ -10,6 +10,6 @@
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"resolveJsonModule": true,
-		"module": "Node16"
+		"module": "ES6"
 	}
 }
